		It was not possible to disconnect file areas.
		Added nopper code to full mailscan.
		Fixed a problem that caused a SIGSEGV when a node was in the
		ticfiles setup to forward file to and there was no noderecord.
		When a ticfile was received while our aka is in the path, the
		bad tic counter wasn't increased.
		Made error message in AddMsgHdr function more clear.

	mball:
		Will not crash anymore when it needs more then 10 minutes to
		create the allfiles and newfiles lists.

	mbtask:
		Removed some debug logging.
		Creates the semafore is_inet when the internet connections is
		available, and removes it when it is down.
		Added test for ISDN/modem lines in use.
		Lots of code cleanup.
		No setup setting anymore for maximum POTS and ISDN lines, this
		is now automatic.
		mbtask will now update internal counters how many ISDN and POTS
		lines are free to use for dialout.
		For ISDN and POTS calls, mbtask now decides which tty to use,
		mbcico gets the tty to use as option on the commandline.
		Keeps track of the number of mailers running.
		Added default path for arealists.
		Keeps track of total mailer TCP/IP sessions and will not start
		new sessions if the limit from the setup is reached. This will
		hopefully prevent that mbcico will use too much bandwidth on
		TCP/IP trafic.

	mbcico:
		Fixed binkp driver to accept incoming unprotected sessions.
		Temporary added extra password handling logs.
		If a binkp session comes in and there already is a session
		with that node, mbcico stopts the binkp session with an error.
		Remove some obsolete code that is handled by mbtask.
		Added some debug logmessages in ttyio.
		Disabled creation of .spl files dusing mail sessions for test.
		Added experimental support for binkp GET command frame, under
		test now.
		Registers TCP/IP sessions with mbtask.

	mbout:
		The status display has now 9 digits for the outbound size.
		New command, mbout reset <node>, unconditionally resets the