@@ -105,132 +105,134 @@ int CheckEchoGroup(char *Area, int SendUplink, faddr *f)
 
     buf = calloc(4097, sizeof(char));
     while (fgets(buf, 4096, ap)) {
-	tag = strtok(buf, "\t \r\n\0");
-	p = strtok(NULL, "\r\n\0");
-	desc = p;
-	while ((*desc == ' ') || (*desc == '\t'))
-	    desc++;
-	if (strcmp(tag, Area) == 0) {
-	    Syslog('m', "Found tag \"%s\" desc \"%s\"", tag, desc);
+	if (strlen(buf) && isalnum(buf[0])) {
+	    tag = strtok(buf, "\t \r\n\0");
+	    p = strtok(NULL, "\r\n\0");
+	    desc = p;
+	    while ((*desc == ' ') || (*desc == '\t'))
+		desc++;
+	    if (strcmp(tag, Area) == 0) {
+		Syslog('m', "Found tag \"%s\" desc \"%s\"", tag, desc);
 
-	    /*
-	     * Area is in AREAS file, now create area.
-	     * If needed, connect at uplink.
-	     */
-	    if (SendUplink) {
-		sprintf(temp, "+%s", Area);
-		if (UplinkRequest(fido2faddr(mgroup.UpLink), FALSE, temp)) {
-		    WriteError("Can't send netmail to uplink");
+		/*
+		 * Area is in AREAS file, now create area.
+		 * If needed, connect at uplink.
+		 */
+		if (SendUplink) {
+		    sprintf(temp, "+%s", Area);
+		    if (UplinkRequest(fido2faddr(mgroup.UpLink), FALSE, temp)) {
+			WriteError("Can't send netmail to uplink");
+			fclose(ap);
+			free(buf);
+			free(temp);
+			return 1;
+		    }
+		}
+
+		sprintf(temp, "%s/etc/mareas.data", getenv("MBSE_ROOT"));
+		if ((mp = fopen(temp, "r+")) == NULL) {
+		    WriteError("$Can't open %s", temp);
 		    fclose(ap);
 		    free(buf);
 		    free(temp);
 		    return 1;
 		}
-	    }
-
-	    sprintf(temp, "%s/etc/mareas.data", getenv("MBSE_ROOT"));
-	    if ((mp = fopen(temp, "r+")) == NULL) {
-		WriteError("$Can't open %s", temp);
-		fclose(ap);
-		free(buf);
-		free(temp);
-		return 1;
-	    }
-	    fread(&msgshdr, sizeof(msgshdr), 1, mp);
-	    offset = msgshdr.hdrsize + ((mgroup.StartArea -1) * (msgshdr.recsize + msgshdr.syssize));
-	    if (fseek(mp, offset, SEEK_SET)) {
-		WriteError("$Can't seek in %s", temp);
-		fclose(ap);
-		fclose(mp);
-		free(buf);
-		free(temp);
-		return 1;
-	    }
-
-	    /*
-	     * Search a free record
-	     */
-	    while (fread(&msgs, sizeof(msgs), 1, mp) == 1) {
-		if (!msgs.Active) {
-		    fseek(mp, - msgshdr.recsize, SEEK_CUR);
-		    offset = ((ftell(mp) - msgshdr.hdrsize) / (msgshdr.recsize + msgshdr.syssize)) + 1;
-		    Syslog('m', "Found free slot at %ld", offset);
-		    rc = 1;
-		    break;
+		fread(&msgshdr, sizeof(msgshdr), 1, mp);
+		offset = msgshdr.hdrsize + ((mgroup.StartArea -1) * (msgshdr.recsize + msgshdr.syssize));
+		if (fseek(mp, offset, SEEK_SET)) {
+		    WriteError("$Can't seek in %s", temp);
+		    fclose(ap);
+		    fclose(mp);
+		    free(buf);
+		    free(temp);
+		    return 1;
 		}
+
 		/*
-		 * Skip systems
+		 * Search a free record
 		 */
-		fseek(mp, msgshdr.syssize, SEEK_CUR);
-	    }
-
-	    if (!rc) {
-		Syslog('m', "No free slot, append after last record");
-		fseek(mp, 0, SEEK_END);
-		if (ftell(mp) < msgshdr.hdrsize + ((mgroup.StartArea -1) * (msgshdr.recsize + msgshdr.syssize))) {
-		    Syslog('m', "Database too small, expanding...");
-		    memset(&msgs, 0, sizeof(msgs));
-		    memset(&System, 0, sizeof(System));
-		    while (TRUE) {
-			fwrite(&msgs, sizeof(msgs), 1, mp);
-			for (i = 0; i < (msgshdr.syssize / sizeof(System)); i++)
-			    fwrite(&System, sizeof(System), 1, mp);
-			if (ftell(mp) >= msgshdr.hdrsize + ((mgroup.StartArea -1) * (msgshdr.recsize + msgshdr.syssize)))
-			    break;
+		while (fread(&msgs, sizeof(msgs), 1, mp) == 1) {
+		    if (!msgs.Active) {
+			fseek(mp, - msgshdr.recsize, SEEK_CUR);
+			offset = ((ftell(mp) - msgshdr.hdrsize) / (msgshdr.recsize + msgshdr.syssize)) + 1;
+			Syslog('m', "Found free slot at %ld", offset);
+			rc = 1;
+			break;
 		    }
+		    /*
+		     * Skip systems
+		     */
+		    fseek(mp, msgshdr.syssize, SEEK_CUR);
 		}
-		rc = 1;
-	    }
 
-	    /*
-	     * Create the record with the defaults from the group record.
-	     */
-	    offset = ((ftell(mp) - msgshdr.hdrsize) / (msgshdr.recsize + msgshdr.syssize)) + 1;
-	    memset(&msgs, 0, sizeof(msgs));
-	    strncpy(msgs.Tag, tag, 50);
-	    strncpy(msgs.Name, desc, 40);
-	    strncpy(msgs.QWKname, tag, 20);
-	    msgs.MsgKinds = PUBLIC;
-	    msgs.Type = ECHOMAIL;
-	    msgs.DaysOld = CFG.defdays;
-	    msgs.MaxMsgs = CFG.defmsgs;
-	    msgs.UsrDelete = mgroup.UsrDelete;
-	    msgs.RDSec = mgroup.RDSec;
-	    msgs.WRSec = mgroup.WRSec;
-	    msgs.SYSec = mgroup.SYSec;
-	    strncpy(msgs.Group, mgroup.Name, 12);
-	    msgs.Aka = mgroup.UseAka;
-	    strncpy(msgs.Origin, CFG.origin, 50);
-	    msgs.Aliases = mgroup.Aliases;
-	    msgs.NetReply = mgroup.NetReply;
-	    msgs.Active = TRUE;
-	    msgs.Quotes = mgroup.Quotes;
-	    msgs.Rfccode = CHRS_DEFAULT_RFC;
-	    msgs.Ftncode = CHRS_DEFAULT_FTN;
-	    msgs.MaxArticles = CFG.maxarticles;
-	    tag = tl(tag);
-	    for (i = 0; i < strlen(tag); i++)
-		if (tag[i] == '.')
-		    tag[i] = '/';
-	    sprintf(msgs.Base, "%s/%s", mgroup.BasePath, tag);
-	    fwrite(&msgs, sizeof(msgs), 1, mp);
+		if (!rc) {
+		    Syslog('m', "No free slot, append after last record");
+		    fseek(mp, 0, SEEK_END);
+		    if (ftell(mp) < msgshdr.hdrsize + ((mgroup.StartArea -1) * (msgshdr.recsize + msgshdr.syssize))) {
+			Syslog('m', "Database too small, expanding...");
+			memset(&msgs, 0, sizeof(msgs));
+			memset(&System, 0, sizeof(System));
+			while (TRUE) {
+			    fwrite(&msgs, sizeof(msgs), 1, mp);
+			    for (i = 0; i < (msgshdr.syssize / sizeof(System)); i++)
+				fwrite(&System, sizeof(System), 1, mp);
+			    if (ftell(mp) >= msgshdr.hdrsize + ((mgroup.StartArea -1) * (msgshdr.recsize + msgshdr.syssize)))
+				break;
+			}
+		    }
+		    rc = 1;
+		}
+
+		/*
+		 * Create the record with the defaults from the group record.
+		 */
+		offset = ((ftell(mp) - msgshdr.hdrsize) / (msgshdr.recsize + msgshdr.syssize)) + 1;
+		memset(&msgs, 0, sizeof(msgs));
+		strncpy(msgs.Tag, tag, 50);
+		strncpy(msgs.Name, desc, 40);
+		strncpy(msgs.QWKname, tag, 20);
+		msgs.MsgKinds = PUBLIC;
+		msgs.Type = ECHOMAIL;
+		msgs.DaysOld = CFG.defdays;
+		msgs.MaxMsgs = CFG.defmsgs;
+		msgs.UsrDelete = mgroup.UsrDelete;
+		msgs.RDSec = mgroup.RDSec;
+		msgs.WRSec = mgroup.WRSec;
+		msgs.SYSec = mgroup.SYSec;
+		strncpy(msgs.Group, mgroup.Name, 12);
+		msgs.Aka = mgroup.UseAka;
+		strncpy(msgs.Origin, CFG.origin, 50);
+		msgs.Aliases = mgroup.Aliases;
+		msgs.NetReply = mgroup.NetReply;
+		msgs.Active = TRUE;
+		msgs.Quotes = mgroup.Quotes;
+		msgs.Rfccode = CHRS_DEFAULT_RFC;
+		msgs.Ftncode = CHRS_DEFAULT_FTN;
+		msgs.MaxArticles = CFG.maxarticles;
+		tag = tl(tag);
+		for (i = 0; i < strlen(tag); i++)
+		    if (tag[i] == '.')
+			tag[i] = '/';
+		sprintf(msgs.Base, "%s/%s", mgroup.BasePath, tag);
+		fwrite(&msgs, sizeof(msgs), 1, mp);
 		
-	    memset(&System, 0, sizeof(System));
-	    System.aka = mgroup.UpLink;
-	    System.sendto = System.receivefrom = TRUE;
-	    fwrite(&System, sizeof(System), 1, mp);
-	    memset(&System, 0, sizeof(System));
-	    for (i = 1; i < (msgshdr.syssize / sizeof(System)); i++)
+		memset(&System, 0, sizeof(System));
+		System.aka = mgroup.UpLink;
+		System.sendto = System.receivefrom = TRUE;
 		fwrite(&System, sizeof(System), 1, mp);
+		memset(&System, 0, sizeof(System));
+		for (i = 1; i < (msgshdr.syssize / sizeof(System)); i++)
+		    fwrite(&System, sizeof(System), 1, mp);
 		
-	    fclose(mp);
-	    fclose(ap);
-	    free(buf);
-	    free(temp);
-	    Syslog('+', "Auto created echo %s, group %s, area %ld, for node %s",
-		msgs.Tag, msgs.Group, offset, ascfnode(f , 0x1f));
-	    return 0;
-	} /* if (strcmp(tag, Area) == 0) */
+		fclose(mp);
+		fclose(ap);
+		free(buf);
+		free(temp);
+		Syslog('+', "Auto created echo %s, group %s, area %ld, for node %s",
+		    msgs.Tag, msgs.Group, offset, ascfnode(f , 0x1f));
+		return 0;
+	    } /* if (strcmp(tag, Area) == 0) */
+	} /* if (strlen(buf) && isalnum(buf[0])) */
     } /* while (fgets(buf, 4096, ap)) */
 
     Syslog('m', "Area %s not found in taglist", Area);
