@@ -4675,6 +4675,8 @@ v0.33.20        10-Feb-2002
 		When a ticfile was received while our aka is in the path, the
 		bad tic counter wasn't increased.
 		Made error message in AddMsgHdr function more clear.
+		Removed experimental patch in news->ftn gate were wrong To:
+		address was created.
 
 	mball:
 		Will not crash anymore when it needs more then 10 minutes to
